[gd_scene load_steps=11 format=3 uid="uid://mptx6cqyndol"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_w4fy2"]
[ext_resource type="PackedScene" uid="uid://gmkbe4bj7ess" path="res://components/sound_feedback_player.tscn" id="2_cf6ys"]
[ext_resource type="Texture2D" uid="uid://dgxhohhwn47f1" path="res://media/paper_bg.png" id="2_q4igb"]
[ext_resource type="Texture2D" uid="uid://c185esx0h15a" path="res://media/circle_2.png" id="4_eyrrr"]
[ext_resource type="PackedScene" uid="uid://4g40wesf7e11" path="res://components/ingredient_button.tscn" id="5_gbaod"]
[ext_resource type="Texture2D" uid="uid://dqgyoq4sccyrs" path="res://media/ingredients/acorn.png" id="6_jy3lw"]
[ext_resource type="SystemFont" uid="uid://oyc4yuhomri1" path="res://media/menu_font.tres" id="7_a2gfh"]
[ext_resource type="PackedScene" uid="uid://dme7cjkmwsjsl" path="res://components/rulebook.tscn" id="8_rij3x"]
[ext_resource type="PackedScene" uid="uid://dgsf510vvxf4r" path="res://components/history.tscn" id="9_7ju5u"]
[ext_resource type="PackedScene" uid="uid://biigr5pril0bt" path="res://components/fail_screen.tscn" id="10_vl3m7"]

[node name="LevelRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4fy2")
demon_name = "dus"

[node name="SoundFeedbackPlayer" parent="." instance=ExtResource("2_cf6ys")]

[node name="Background" type="Node2D" parent="."]

[node name="Floor" type="Sprite2D" parent="Background"]
texture_repeat = 2
texture = ExtResource("2_q4igb")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 640, 360)

[node name="Ingredient0" type="Sprite2D" parent="Background" groups=["IngredientImage"]]
position = Vector2(320, 106)
texture = ExtResource("6_jy3lw")

[node name="Foreground" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubmitButton" type="TextureButton" parent="Foreground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.405
anchor_top = 0.333
anchor_right = 0.605
anchor_bottom = 0.689
offset_left = -0.200012
offset_top = 0.119995
offset_right = -0.200012
offset_bottom = -0.039978
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("4_eyrrr")

[node name="Label" type="Label" parent="Foreground/SubmitButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -11.0
offset_right = 24.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
text = "Summon"

[node name="IngredientButton0" parent="Foreground" instance=ExtResource("5_gbaod")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 234.0
offset_top = 58.0
offset_right = 409.0
offset_bottom = 78.0

[node name="DemonName" type="Label" parent="Foreground"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 572.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_a2gfh")
theme_override_font_sizes/font_size = 60
text = "MMM"

[node name="RulesButton" type="Button" parent="Foreground"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -87.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Rulebook"

[node name="HistoryButton" type="Button" parent="Foreground"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = 35.0
offset_bottom = 66.0
grow_horizontal = 0
text = "History"

[node name="Rulebook" parent="Foreground" instance=ExtResource("8_rij3x")]
layout_mode = 1

[node name="History" parent="Foreground" instance=ExtResource("9_7ju5u")]
layout_mode = 1

[node name="FailScreen" parent="Foreground" instance=ExtResource("10_vl3m7")]
layout_mode = 1

[connection signal="pressed" from="Foreground/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="item_selected" from="Foreground/IngredientButton0" to="." method="_on_ingredient_selected" binds= [0]]
[connection signal="pressed" from="Foreground/RulesButton" to="." method="_on_rules_button_pressed"]
[connection signal="pressed" from="Foreground/HistoryButton" to="." method="_on_history_button_pressed"]
